# WizChess-Code

./: .eslintrc.json  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
src/: App.tsx  api.ts  index.css
src/components/: Board.tsx  CapturedPieces.tsx  DialogueScroll.tsx  FocusPoints.tsx  MoveHistory.tsx
src/lib/: pieces.ts  sanitizeFen.ts  stockfish.ts  wiz.ts
wizchess_backend.egg-info/: PKG-INFO  requires.txt
